Relase and add uninstall.bat

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,7 +80,7 @@ jobs:
             ${{ env.ZIP_PATH }}
             ${{ env.BOOTSTRAP_PATH }}
             tools/Install-KXGTLatest.bat
-            tools/Uninstall-KXGTLocal.ps1
+            tools/Uninstall-KXGTLocal.bat
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
